--- a/style.sass
+++ b/style.sass
@@ -7,6 +7,7 @@ html,body
 
 body
     display: flex
+    flex-direction: column
     align-items: center
 
 .row
@@ -82,3 +83,14 @@ header, .navbar
     width: 100%
     margin:
         top: 5px
+
+/* Desenvolvedores */
+
+card{
+  border-radius: 50%;
+  border-width: 0;
+  card-color; blue;
+}
+.card-body{
+    text-align: center;
+}
