--- a/style.sass
+++ b/style.sass
@@ -88,6 +88,10 @@ header, .navbar
     margin:
         top: 5px
 
+.body-login
+    background:
+        color: $cor_de_fundo_primaria
+
 /* Slider */
 
 .container-fluid 
