homepage semi pronta

--- a/style.sass
+++ b/style.sass
@@ -144,3 +144,44 @@ header, .navbar
 .container-fluid, #about-area
     position: relative
     top: 400px
+
+/* Descrição e Apelo*/
+#about-area 
+  background-color: #F9F9F9
+
+#apelo-container 
+  background-color: #3508ff7e
+
+.main-title 
+  color: #444
+  margin: 0 0 65px 0
+  font-size: 40px
+  text-align: center
+
+.main-title::after 
+  content: ""
+  border-top: 2px solid #333
+  width: 15%
+  position: absolute
+  top: 60px
+  left: 42.5%
+
+.about-title 
+  font-size: 17px
+  color: #444
+  text-transform: uppercase
+  font-weight: bold
+
+#about-list 
+  list-style: none
+  padding-left: 0
+
+#about-list li 
+  line-height: 30px
+
+#about-list i 
+  color: yellow
+  margin-right: 15px
+
+#about-area .container
+    padding-bottom: 0
