--- a/style.sass
+++ b/style.sass
@@ -7,7 +7,7 @@ html,body
 
 body
     display: flex
-    flex-direction: column
+    flex-direction: columns
     align-items: center
 
 .row
@@ -86,11 +86,9 @@ header, .navbar
 
 /* Desenvolvedores */
 
-card{
-  border-radius: 50%;
-  border-width: 0;
-  card-color; blue;
-}
-.card-body{
-    text-align: center;
-}
+.card-body
+    align-items: center
+    text-align: center
+
+.container-fluid
+    flex-direction: column
