--- a/style.sass
+++ b/style.sass
@@ -148,3 +148,95 @@ header, .navbar
 .container-fluid, #about-area
     position: relative
     top: 400px
+    
+/* Copy-area */
+
+#contact-area, #copy-area
+    position: relative
+    top: 1400px
+    text:
+        align: center
+
+.contact-box
+    padding:
+        bottom: 50px
+        top: 50px
+    margin:
+        bottom: 50px
+    border:
+        bottom: 1px solid #3EC1D5
+    nav
+        p 
+            font-size: 16px
+        a
+            font-weight: none
+            color: #444
+        a:hover
+            text-decoration: none
+            color: #3ec1d5
+
+.contact-title
+    font-weight: bold
+
+#msg-box
+    p
+        font-size: 22px
+
+%forma_rodape
+    margin-bottom: 15px
+    border-radius: 0
+
+#contact-form 
+    input[type="text"]
+        @extend %forma_rodape
+    input[type="email"]
+        @extend %forma_rodape
+    textarea
+        @extend %forma_rodape
+    .main-btn
+        width: 120px
+        height: 50px
+    .main-btn:hover
+            color: #3ec1d5
+
+#git, #email, #insta
+    color: #444
+    border: 1px solid #444
+        radius: 50%
+    width: 55px
+    height: 55px
+    line-height: 55px
+    margin-bottom: 20px
+
+
+footer
+    position: absolute
+    bottom: 0
+    width: 100%
+
+.footer-title
+    text:
+        align: center
+    font-size: 40px
+    padding:
+        bottom: 50px
+        top: 50px
+    margin:
+        top: 50px
+    border:
+        top: 1px solid #3EC1D5
+
+/* Copy-area */
+
+#copy-area
+    .container
+        padding: 10px 0
+        text-align: center
+        p
+            margin-bottom: 0
+        a
+            font-weight: bold
+            color: #444
+        a:hover
+            text-decoration: none
+            color: #3ec1d5
