--- a/style.sass
+++ b/style.sass
@@ -194,68 +194,59 @@ header, .navbar
 
 /* Desenvolvedores */
 
-.card
+#card-desenvolvedores
   border-radius: 10%
   border-width: 0
   background: black
   box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05)
 
-
-.card-body, .card-title, .card-text
+#card-corpo, #card-titulo, #card-texto
   text-align: center
-  color: white
-
+  color: rgb(250, 214, 9)
 
 .card-link
   text-decoration: none
-
 
 .card-img-top
   border-radius: 50%
   transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12)
   padding: 20px 30px 30px 20px
 
-
-.card:hover
-  background: yellow
+#card-desenvolvedores:hover
+  background: rgb(0, 119, 255)
   transform: scale(1.05)
   box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)
   cursor: pointer
 
-.container, .container-fluid
+#card-container, #amanda,#ezequiel,#jairon,#sofia
   position:relative
   top: 50px
   width:100%
   height:75%
 
-
-.container h1, .container-fluid h1
+#card-container h1, #amanda h1,#ezequiel h1,#jairon h1,#sofia h1
   padding-bottom: 25px
 
-
-
-
-.container h1, .container p, .container-fluid h1, .container-fluid p
+#amanda h1, #ezequiel h1, #jairon h1, #sofia h1, #amanda p, #ezequiel p, #jairon p, #sofia p
   color: white
-
 
 #team-area
   position:relative
   margin-bottom: 200px
 
-
-.heading,#team-area
+#team-heading,#team-area
   margin-bottom:50px
   font-size: 50px
-
+  color: rgb(0, 0, 0)
 
 #amanda,#ezequiel,#jairon,#sofia
   padding: 50px
+  padding-bottom: 70px
   background-color: rebeccapurple
   margin-top: 200px
+  box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0, 0, 0, 0.295)
 
-
-.bi 
+.bi
   width: 25px
   padding: 20px
   font-size: 40px
@@ -265,22 +256,17 @@ header, .navbar
   color: white
   border-radius: 50%
 
-
-.bi-facebook:hover 
+.bi-facebook:hover
   color: #2b6aff
 
-
-.bi-discord:hover 
+.bi-discord:hover
   color: #9077ff
 
-
-.bi-instagram:hover 
+.bi-instagram:hover
   color: #d414ab
-
 
 .bi-github:hover 
   color: #000000
-
 
 .bi-envelope-fill:hover 
   color: #dd4b39
