Colocando ids nos container-fluid da Amanda (todas as pags de servicos). Ainda ha problema com container na pag login.

--- a/style.css
+++ b/style.css
@@ -303,6 +303,11 @@ header, .navbar {
 
 /*Serviços*/
 
+#cont-fluid-servicos{
+  position: relative;
+  top: 400px;
+}
+
 #card-servicos1 {
   position:relative;
   margin-top: -100px;
