--- a/style.sass
+++ b/style.sass
@@ -117,7 +117,7 @@ header, .navbar
 
 .container-fluid, #about-area
     position: relative
-    top: 400px
+    top: 100px
 
 /* Descrição e Apelo*/
 #about-area 
@@ -270,3 +270,29 @@ header, .navbar
 
 .bi-envelope-fill:hover 
   color: #dd4b39
+
+/*Serviços*/
+
+#cont-fluid-servicos
+  position: relative
+  top: 400px
+
+#card-servicos1
+  position:relative
+  margin-top: -100px
+  margin-bottom: 50px
+
+#card-servicos2
+  position:relative
+  margin-top: -100px
+  margin-bottom: 50px
+
+#card-servicos3
+  position:relative
+  margin-top: -150px
+  margin-bottom: 50px
+
+#nova-atv
+  position:fixed
+  margin-left: 100px
+  margin-right:100px
