Adicionei ids aos containers de login e criar-conta para não misturar com os do index.

--- a/style.css
+++ b/style.css
@@ -173,6 +173,11 @@ header, .navbar {
 }
 
 /* Página de login */
+#container-login{
+  position: relative;
+  top: 200px;
+}
+
 .form-group {
   margin-top: 5px;
   margin-bottom: 5px;
