--- a/style.sass
+++ b/style.sass
@@ -168,6 +168,11 @@ header, .navbar
     border: 20px solid $cor_de_fundo_secundaria
         radius: 20px
 
+#container-login
+  position: relative
+  top: 200px
+
+
 .form-group
     margin:
         top: 5px
