--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ html, body {
   height: 100%;
 }
 
+main {
+  width: 100%;
+}
+
 body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -63,7 +67,7 @@ header, .navbar {
   border-bottom: 3px solid #FFF;
 }
 
-/* Página de login */
+/* Páginas de login */
 .form-group {
   margin-top: 5px;
   margin-bottom: 5px;
@@ -153,13 +157,13 @@ header, .navbar {
 
 .container-fluid, #about-area {
   position: relative;
-  top: 400px;
+  top: 500px;
 }
 
 /* Footer */
 #contact-area, #copy-area {
   position: relative;
-  top: 1400px;
+  top: 1000px;
   text-align: center;
 }
 
@@ -167,21 +171,32 @@ header, .navbar {
   padding-bottom: 50px;
   padding-top: 50px;
   margin-bottom: 50px;
-  border-bottom: 1px solid #3EC1D5;
+  border-bottom: 1px solid #444;
 }
 
-.contact-box nav p {
+.contact-box p {
   font-size: 16px;
 }
 
-.contact-box nav a {
+.contact-box a {
   font-weight: none;
   color: #444;
 }
 
-.contact-box nav a:hover {
+.contact-box a:hover {
   text-decoration: none;
   color: #3ec1d5;
+}
+
+.contact-box i {
+  color: #444;
+  border: 2px solid #444;
+  border-radius: 70%;
+  width: 30px;
+  height: 55px;
+  line-height: 55px;
+  margin: 40px;
+  font-size: 50px;
 }
 
 .contact-title {
@@ -206,29 +221,23 @@ header, .navbar {
   color: #3ec1d5;
 }
 
-#git, #email, #insta {
-  color: #444;
-  border: 1px solid #444;
-  border-radius: 50%;
-  width: 55px;
-  height: 55px;
-  line-height: 55px;
-  margin-bottom: 20px;
+.espaco-footer {
+  padding-bottom: 100px;
 }
 
 footer {
+  width: 100%;
+  height: 100px;
   position: absolute;
   bottom: 0;
-  width: 100%;
+  left: 0;
 }
 
 .footer-title {
   text-align: center;
   font-size: 40px;
-  padding-bottom: 50px;
   padding-top: 50px;
   margin-top: 50px;
-  border-top: 1px solid #3EC1D5;
 }
 
 /* Copy-area */
@@ -299,36 +308,5 @@ footer {
 
 #about-area .container {
   padding-bottom: 0;
-}
-
-/* Página de login */
-.form-group {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.formlogin {
-  background-color: #800080;
-  border: 20px solid #800080;
-  border-radius: 20px;
-}
-
-.form-inline {
-  background-color: #800080;
-  border: 20px solid #800080;
-  border-radius: 20px;
-}
-
-.text-center {
-  color: #FFF;
-}
-
-.btn-block {
-  width: 49%;
-}
-
-.btn-block_conta {
-  width: 100%;
-  margin-top: 5px;
 }
 /*# sourceMappingURL=style.css.map */
