--- a/style.sass
+++ b/style.sass
@@ -52,6 +52,8 @@ header, .navbar
 #navbar-links 
     a
         color: $cor_da_fonte
+    a:hover
+        text-decoration: none
   
 .navbar-expand-lg .navbar-nav .nav-link
     padding: 1rem .8rem
@@ -98,7 +100,7 @@ header, .navbar
 
 /* Slider */
 
-.container-fluid 
+.container-fluid
     padding: 0
 
 #mainSlider .carousel-inner, #mainSlider .carousel-item
@@ -133,6 +135,7 @@ header, .navbar
         radius: 30px
     border: 3px solid transparent
     transition: .5s
+    text-decoration: none
 
 .main-btn:hover 
     text:
@@ -151,13 +154,19 @@ header, .navbar
 
 .container-fluid, #about-area
     position: relative
-    top: 500px
-    
+    top: 590px
+
 /* Footer */
 
-#contact-area, #copy-area
+#contact-area-index, #copy-area-index
     position: relative
-    top: 1000px
+    top: 1090px
+    text:
+        align: center
+
+#contact-area-login, #copy-area-login
+    position: relative
+    top: 0px
     text:
         align: center
 
@@ -176,7 +185,7 @@ header, .navbar
         color: #444
     a:hover
         text-decoration: none
-        color: #3ec1d5
+        color: #f9f9f9
     i
         color: #444
         border: 2px solid #444
@@ -185,7 +194,8 @@ header, .navbar
         height: 55px
         line-height: 55px
         margin: 40px
-        font-size: 50px
+        font-size: 30px
+        padding: 3px
 
 .contact-title
     font-weight: bold
@@ -209,7 +219,7 @@ header, .navbar
         width: 120px
         height: 50px
     .main-btn:hover
-            color: #3ec1d5 
+            color: #F9F9F9
 
 .espaco-footer
     padding-bottom: 100px
@@ -225,14 +235,10 @@ footer
     text:
         align: center
     font-size: 40px
-    padding:
-        top: 50px
-    margin:
-        top: 50px
 
 /* Copy-area */
 
-#copy-area
+#copy-area-index
     .container
         padding: 10px 0
         text-align: center
@@ -243,7 +249,20 @@ footer
             color: #444
         a:hover
             text-decoration: none
-            color: #3ec1d5
+            color: #F9F9F9
+
+#copy-area-login
+    .container
+        padding: 10px 0
+        text-align: center
+        p
+            margin-bottom: 0
+        a
+            font-weight: bold
+            color: #444
+        a:hover
+            text-decoration: none
+            color: #F9F9F9
 
 /* Descrição e Apelo*/
 
@@ -286,3 +305,18 @@ footer
 
 #about-area .container
     padding-bottom: 0 
+
+/* Serviços */
+
+#nova-atv
+    position: absolute
+    align-content: center
+
+.container-fluid-serv
+    position: relative
+    top: 100px
+    width: 100%
+    height: 100%
+
+.container-fluid-serv
+    padding: 0
