Algumas alterações no sass

--- a/style.sass
+++ b/style.sass
@@ -278,23 +278,13 @@ header, .navbar
 
 /*Serviços*/
 
-#card-servicos1
+#card-servicos1, #card-servicos2, #card-servicos3, #card-servicos4
   position:relative
-  margin-top: -100px
-  margin-bottom: 50px
-  top: 400px
-
-#card-servicos2
-  position:relative
-  margin-top: -100px
-  margin-bottom: 50px
-  top: 400px
-
-#card-servicos3
-  position:relative
-  margin-top: -150px
-  margin-bottom: 50px
-  top: 400px
+  margin-top: 30px
+  margin-bottom: 30px
+  color:#444
+  margin-left: 50px
+  margin-right: 50px
 
 #nova-atv
   position:fixed
