--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ header, .navbar {
   box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0, 0, 0, 0.295);
 }
 
-.bi {  
+#facebook, #instagram, #email, #github {  
   width: 25px;
   padding: 20px;
   font-size: 40px;
@@ -300,25 +300,46 @@ header, .navbar {
   border-radius: 50%; 
 }
 
-.bi-facebook:hover {
+#facebook:hover {
   color: #2b6aff;
 }
 
-.bi-discord:hover {
-  color: #9077ff;
-}
-
-.bi-instagram:hover {
+#instagram:hover {
   color: #d414ab;
 }
 
-.bi-github:hover {
+#github:hover {
   color: #000000;
 }
 
-.bi-envelope-fill:hover {
+#email:hover {
   color: #dd4b39;
 }
+
+.botao-top{
+  position:fixed;
+  width: 50px;
+  height: 50px;
+  background-color: rgb(255, 238, 0);
+  bottom: 40px;
+  right:40px;
+  text-align: center;
+  box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0, 0, 0, 0.411);
+  cursor: pointer;
+  border-radius: 50%;
+ }
+
+ .bi-arrow-up{
+  align-items: center;
+  line-height: 50px;
+  color: #000;
+  font-size:30px;
+ }
+  
+ .botao-top:hover{
+  transform: scale(1.05);
+ }
+ 
 
 /*Serviços*/
 
