--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ html, body {
   height: 100%;
 }
 
+main {
+  width: 100%;
+}
+
 body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -104,6 +108,7 @@ header, .navbar {
   border: 3px solid transparent;
   -webkit-transition: .5s;
   transition: .5s;
+  text-decoration: none;
 }
 
 .main-btn:hover {
@@ -111,6 +116,7 @@ header, .navbar {
   color: #FFF;
   background-color: transparent;
   border-color: #5a3ed5;
+  text-decoration: none;
 }
 
 .carousel-caption.d-md-block h2 {
@@ -123,7 +129,7 @@ header, .navbar {
 
 .container-fluid, #about-area {
   position: relative;
-  top: 100px;
+  top: 80px;
 }
 
 /* Descrição e Apelo*/
@@ -246,6 +252,7 @@ header, .navbar {
 }
 
 #card-container, #amanda, #ezequiel, #jairon, #sofia {
+  position: relative;
   top: 50px;
   width: 100%;
   height: 75%;
@@ -260,7 +267,9 @@ header, .navbar {
 }
 
 #team-area {
+  position: relative;
   margin-bottom: 200px;
+  margin-top: 30px;
 }
 
 #team-heading, #team-area {
@@ -309,6 +318,7 @@ header, .navbar {
   color: #dd4b39;
 }
 
+/* Serviços */
 #card-servicos1, #card-servicos2, #card-servicos3, #card-servicos4 {
   position: relative;
   margin-top: 30px;
@@ -316,12 +326,16 @@ header, .navbar {
   color: #444;
   margin-left: 50px;
   margin-right: 50px;
+  padding-bottom: 50px;
 }
 
 #nova-atv {
+  position: relative;
   margin-left: 100px;
   margin-right: 100px;
-  top: 200px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
 }
 
 /* Footer */
@@ -331,7 +345,7 @@ header, .navbar {
   text-align: center;
 }
 
-#contact-area-login, #copy-area-login {
+#contact-area-login, #copy-area-login, #contact-area-atv, #copy-area-atv {
   position: relative;
   top: 0px;
   text-align: center;
@@ -340,6 +354,24 @@ header, .navbar {
 #contact-area-desenvolvedores, #copy-area-desenvolvedores {
   position: relative;
   top: 3080px;
+  text-align: center;
+}
+
+#contact-area-pom, #copy-area-pom {
+  position: relative;
+  top: 500px;
+  text-align: center;
+}
+
+#contact-area-criar_atv, #copy-area-criar_atv {
+  position: relative;
+  top: 200px;
+  text-align: center;
+}
+
+#contact-area-des, #copy-area-des {
+  position: relative;
+  top: 3200px;
   text-align: center;
 }
 
@@ -416,59 +448,21 @@ footer {
 }
 
 /* Copy-area */
-#copy-area-index .container {
+#copy-area-index .container, #copy-area-login .container, #copy-area-desenvolvedores .container, #copy-area-atv .container, #copy-area-pom .container, #copy-area-criar_atv .container, #copy-area-des .container {
   padding: 10px 0;
   text-align: center;
 }
 
-#copy-area-index .container p {
+#copy-area-index .container p, #copy-area-login .container p, #copy-area-desenvolvedores .container p, #copy-area-atv .container p, #copy-area-pom .container p, #copy-area-criar_atv .container p, #copy-area-des .container p {
   margin-bottom: 0;
 }
 
-#copy-area-index .container a {
+#copy-area-index .container a, #copy-area-login .container a, #copy-area-desenvolvedores .container a, #copy-area-atv .container a, #copy-area-pom .container a, #copy-area-criar_atv .container a, #copy-area-des .container a {
   font-weight: bold;
   color: #444;
 }
 
-#copy-area-index .container a:hover {
-  text-decoration: none;
-  color: #F9F9F9;
-}
-
-#copy-area-login .container {
-  padding: 10px 0;
-  text-align: center;
-}
-
-#copy-area-login .container p {
-  margin-bottom: 0;
-}
-
-#copy-area-login .container a {
-  font-weight: bold;
-  color: #444;
-}
-
-#copy-area-login .container a:hover {
-  text-decoration: none;
-  color: #F9F9F9;
-}
-
-#copy-area-desenvolvedores .container {
-  padding: 10px 0;
-  text-align: center;
-}
-
-#copy-area-desenvolvedores .container p {
-  margin-bottom: 0;
-}
-
-#copy-area-desenvolvedores .container a {
-  font-weight: bold;
-  color: #444;
-}
-
-#copy-area-desenvolvedores .container a:hover {
+#copy-area-index .container a:hover, #copy-area-login .container a:hover, #copy-area-desenvolvedores .container a:hover, #copy-area-atv .container a:hover, #copy-area-pom .container a:hover, #copy-area-criar_atv .container a:hover, #copy-area-des .container a:hover {
   text-decoration: none;
   color: #F9F9F9;
 }
