--- a/style.sass
+++ b/style.sass
@@ -6,6 +6,9 @@ $cor_de_fundo_secundaria: #800080
 html,body
     height: 100%
 
+main
+    width: 100%
+
 body
     display: flex
     flex-direction: column
@@ -96,6 +99,7 @@ header, .navbar
         radius: 30px
     border: 3px solid transparent
     transition: .5s
+    text-decoration: none
 
 .main-btn:hover 
     text:
@@ -105,6 +109,7 @@ header, .navbar
         color: transparent
     border:
         color: #5a3ed5
+    text-decoration: none
 
 .carousel-caption.d-md-block 
     h2
@@ -114,7 +119,7 @@ header, .navbar
 
 .container-fluid, #about-area
     position: relative
-    top: 100px
+    top: 80px
 
 /* Descrição e Apelo*/
 #about-area 
@@ -221,7 +226,7 @@ header, .navbar
   cursor: pointer
 
 #card-container, #amanda,#ezequiel,#jairon,#sofia
-  position:relative
+  position: relative
   top: 50px
   width: 100%
   height: 75%
@@ -233,8 +238,10 @@ header, .navbar
   color: white
 
 #team-area
-  position:relative
-  margin-bottom: 200px
+    position: relative
+    margin:
+        bottom: 200px
+        top: 30px
 
 #team-heading,#team-area
   margin-bottom: 50px
@@ -273,7 +280,7 @@ header, .navbar
 .bi-envelope-fill:hover 
   color: #dd4b39
 
-/Serviços/
+/* Serviços */
 
 #card-servicos1, #card-servicos2, #card-servicos3, #card-servicos4
   position: relative
@@ -282,12 +289,15 @@ header, .navbar
   color:#444
   margin-left: 50px
   margin-right: 50px
+  padding-bottom: 50px
 
 #nova-atv
-  position:fixed
+  position: relative
   margin-left: 100px
   margin-right: 100px
-  top: 200px
+  top: 0px
+  width: 100%
+  height: 100%
 
 /* Footer */
 
@@ -297,7 +307,7 @@ header, .navbar
     text:
         align: center
 
-#contact-area-login, #copy-area-login
+#contact-area-login, #copy-area-login, #contact-area-atv, #copy-area-atv
     position: relative
     top: 0px
     text:
@@ -306,6 +316,24 @@ header, .navbar
 #contact-area-desenvolvedores, #copy-area-desenvolvedores
     position: relative
     top: 3080px
+    text:
+        align: center
+
+#contact-area-pom, #copy-area-pom
+    position: relative
+    top: 500px
+    text:
+        align: center
+
+#contact-area-criar_atv, #copy-area-criar_atv
+    position: relative
+    top: 200px
+    text:
+        align: center
+
+#contact-area-des, #copy-area-des
+    position: relative
+    top: 3200px
     text:
         align: center
 
@@ -377,33 +405,7 @@ footer
 
 /* Copy-area */
 
-#copy-area-index
-    .container
-        padding: 10px 0
-        text-align: center
-        p
-            margin-bottom: 0
-        a
-            font-weight: bold
-            color: #444
-        a:hover
-            text-decoration: none
-            color: #F9F9F9
-
-#copy-area-login
-    .container
-        padding: 10px 0
-        text-align: center
-        p
-            margin-bottom: 0
-        a
-            font-weight: bold
-            color: #444
-        a:hover
-            text-decoration: none
-            color: #F9F9F9
-
-#copy-area-desenvolvedores
+#copy-area-index, #copy-area-login, #copy-area-desenvolvedores, #copy-area-atv, #copy-area-pom, #copy-area-criar_atv, #copy-area-des
     .container
         padding: 10px 0
         text-align: center
