--- a/style.sass
+++ b/style.sass
@@ -279,12 +279,30 @@ header, .navbar
   position:relative
   margin-top: 30px
   margin-bottom: 30px
-  color:#444
+  color: $cor_da_fonte
   margin-left: 50px
   margin-right: 50px
+  background-color: rebeccapurple
 
 #nova-atv
   position:fixed
   margin-left: 100px
   margin-right:100px
-  top: 200px
+  top: 100px
+
+#aba1-ativa, #aba2-ativa, #aba3-ativa
+  background-color: rgb(90, 45, 134)
+  border-color: rgba(63, 32, 95, 0.5)
+
+.card-text, #aba1, #aba2, #aba3, #aba1-ativa, #aba2-ativa, #aba3-ativa
+  color:$cor_da_fonte
+
+#ampulheta
+  width: 200px
+  height: 200px
+
+#cronometro
+  padding: 5px
+  color:#444
+  background-color: $cor_da_fonte
+  border-radius: 5px
