--- a/style.css
+++ b/style.css
@@ -14,9 +14,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: columns;
-          flex-direction: columns;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -73,7 +72,7 @@ header, .navbar {
 }
 
 .navbar-text {
-  color:#FFF;
+  color: #FFF;
 }
 
 #sigla {
@@ -198,7 +197,7 @@ header, .navbar {
 /* Página de login */
 #container-login {
   position: relative;
-  top: 150px;
+  top: 200px;
 }
 
 .form-group {
@@ -328,7 +327,7 @@ header, .navbar {
 }
 
 .botao-top {
-  position:fixed;
+  position: fixed;
   width: 50px;
   height: 50px;
   background-color: #ffee00;
@@ -360,24 +359,10 @@ header, .navbar {
   position: relative;
   margin-top: 30px;
   margin-bottom: 30px;
-  color:#FFF;
+  color: #FFF;
   margin-left: 50px;
   margin-right: 50px;
   background-color: rebeccapurple;
-}
-
-#aba1-ativa, #aba2-ativa, #aba3-ativa{
-  background-color: rgb(90, 45, 134);
-  color:#FFF;
-  border-color:rgba(63, 32, 95, 0.5)
-}
-
-#aba1, #aba2, #aba3{
-  color:#FFF;
-}
-
-.card-text{
-  color:#FFF;
 }
 
 #nova-atv {
@@ -387,28 +372,41 @@ header, .navbar {
   top: 100px;
 }
 
-#cronometro {
-  padding: 5px;
-  color:#444;
-  background-color: #FFF;
-  border-radius: 5px;
+#aba1-ativa, #aba2-ativa, #aba3-ativa {
+  background-color: #5a2d86;
+  border-color: rgba(63, 32, 95, 0.5);
 }
 
-#ampulheta{
-  height: 200px;
+.card-text, #aba1, #aba2, #aba3, #aba1-ativa, #aba2-ativa, #aba3-ativa {
+  color: #FFF;
+}
+
+#ampulheta {
   width: 200px;
+  height: 200px;
+}
+
+#cronometro {
+  padding: 5px;
+  color: #444;
+  background-color: #FFF;
+  border-radius: 5px;
+  margin-right: 100px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
 }
 
 /* Footer */
 #contact-area-index, #copy-area-index {
   position: relative;
-  top: 1100px;
+  top: 1180px;
   text-align: center;
 }
 
 #contact-area-login, #copy-area-login, #contact-area-atv, #copy-area-atv {
   position: relative;
-  top: 100px;
+  top: 0px;
   text-align: center;
 }
 
@@ -420,7 +418,7 @@ header, .navbar {
 
 #contact-area-pom, #copy-area-pom {
   position: relative;
-  top: 100px;
+  top: 500px;
   text-align: center;
 }
 
@@ -433,7 +431,7 @@ header, .navbar {
 
 #contact-area-des, #copy-area-des {
   position: relative;
-  top: 3280px;
+  top: 3200px;
   text-align: center;
 }
 
