--- a/style.css
+++ b/style.css
@@ -139,13 +139,13 @@ header, .navbar {
   text-shadow: #000 0.5px 0.5px;
 }
 
-.container-fluid, #about-area {
+.container-fluid, .about-area {
   position: relative;
   top: 80px;
 }
 
 /* Descrição e Apelo*/
-#about-area {
+.about-area {
   background-color: #F9F9F9;
 }
 
@@ -190,7 +190,7 @@ header, .navbar {
   margin-right: 15px;
 }
 
-#about-area .container {
+.about-area .container {
   padding-bottom: 0;
 }
 
@@ -231,7 +231,7 @@ header, .navbar {
 }
 
 /* Desenvolvedores */
-#card-desenvolvedores {
+.card-desenvolvedores {
   border-radius: 10%;
   border-width: 0;
   background: black;
@@ -239,7 +239,7 @@ header, .navbar {
           box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
 }
 
-#card-corpo, #card-titulo, #card-palavras {
+.card-corpo, .card-titulo, .card-palavras {
   text-align: center;
   color: #fad609;
 }
@@ -299,7 +299,7 @@ header, .navbar {
           box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.295);
 }
 
-#facebook, #instagram, #email, #github {
+.facebook, .instagram, .email, .github {
   width: 25px;
   padding: 20px;
   font-size: 40px;
@@ -310,19 +310,19 @@ header, .navbar {
   border-radius: 50%;
 }
 
-#facebook:hover {
+.facebook:hover {
   color: #2b6aff;
 }
 
-#instagram:hover {
+.instagram:hover {
   color: #d414ab;
 }
 
-#github:hover {
+.github:hover {
   color: #000000;
 }
 
-#email:hover {
+.email:hover {
   color: #dd4b39;
 }
 
@@ -447,7 +447,6 @@ header, .navbar {
 }
 
 .contact-box a {
-  font-weight: none;
   color: #444;
 }
 
