--- a/style.sass
+++ b/style.sass
@@ -126,12 +126,12 @@ header, .navbar
     p
         text-shadow: #000 0.5px 0.5px
 
-.container-fluid, #about-area
+.container-fluid, .about-area
     position: relative
     top: 80px
 
 /* Descrição e Apelo*/
-#about-area 
+.about-area 
   background-color: #F9F9F9
 
 #apelo-container 
@@ -168,7 +168,7 @@ header, .navbar
   color: yellow
   margin-right: 15px
 
-#about-area .container
+.about-area .container
     padding-bottom: 0 
 
 /* Página de login */
@@ -210,13 +210,13 @@ header, .navbar
 
 /* Desenvolvedores */
 
-#card-desenvolvedores
+.card-desenvolvedores
   border-radius: 10%
   border-width: 0
   background: black
   box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05)
 
-#card-corpo, #card-titulo, #card-palavras
+.card-corpo, .card-titulo, .card-palavras
   text-align: center
   color: rgb(250, 214, 9)
 
@@ -265,7 +265,7 @@ header, .navbar
   margin-top: 200px
   box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0, 0, 0, 0.295)
 
-#facebook, #instagram, #email, #github 
+.facebook, .instagram, .email, .github 
   width: 25px
   padding: 20px
   font-size: 40px
@@ -275,16 +275,16 @@ header, .navbar
   color: white
   border-radius: 50%
 
-#facebook:hover 
+.facebook:hover 
   color: #2b6aff
 
-#instagram:hover 
+.instagram:hover 
   color: #d414ab
 
-#github:hover 
+.github:hover 
   color: #000000
 
-#email:hover 
+.email:hover 
   color: #dd4b39
 
 
@@ -397,7 +397,6 @@ header, .navbar
     p 
         font-size: 16px
     a
-        font-weight: none
         color: #444
     a:hover
         text-decoration: none
