Correção de erro no título da navbar

--- a/style.sass
+++ b/style.sass
@@ -347,6 +347,10 @@ header, .navbar
   width: 100%
   height: 100%
 
+.grafico
+  width:200px
+  height:150px
+
 /* Footer */
 
 #contact-area-index, #copy-area-index
